--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1244,7 +1244,6 @@
 .section-8 {
     padding-top: 10px;
     padding-bottom: 30px;
-    width: 100%;
     overflow: hidden;
 
     @include media-sm {
@@ -1257,6 +1256,7 @@
     &__content {
         padding-top: 20px;
         display: flex;
+        width: 100%;
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -1333,8 +1333,7 @@
         }
         &__icon {
             position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
+            top: 23px;
             right: 0;
             width: 22px;
             height: 22px;
@@ -1503,16 +1502,16 @@
     backdrop-filter: blur(6px);
     background: rgba(0,0,0, .7);
     z-index: 998;
-    visibility: visible;
+    display: block;
 }
 .popup {
     width: 100%;
     height: auto;
-    max-width: 340px;
+    max-width: 320px;
     background: url(../images/popup-bg.svg);
     background-size: 100% 100%;
     position: fixed;
-    visibility: visible;
+    display: block;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
